# gdbus-example

./: README.md  gdbus.spec
testdbus-1.0/data/: Makefile.am  org.freedesktop.Testdbus.conf.in  org.freedesktop.Testdbus.service.in  org.freedesktop.Testdbus.xml  testdbus.service.in
testdbus-1.0/src/: Makefile.am  main.c  testgdbus.c
